--- a/ehr/src/Ehr.css
+++ b/ehr/src/Ehr.css
@@ -5,11 +5,35 @@
   min-height: 100vh;
   color: lightgray;
 }
+
 .Site-content {
   flex: 1;
-  flex-direction: column;
-  width: 100vw;
+  height: 100vh;
 }
+
+.Site-content .Ehr-buttons {
+  background: greenyellow;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  padding: 2px;
+}
+
+.Site-content .Ehr-buttons p {
+  color: black;
+  margin: 0.4rem;
+  font-size: calc(4px + 1vmin);
+  flex: 1;
+  text-align: right;
+}
+
+.Site-content .Ehr-buttons button {
+
+  margin: 3px;
+  font-size: calc(4px + 1vmin);
+}
+
 .Ehr iframe {
   flex: 1;
   width: calc(100vw - 5vw);
