--- a/ehr/src/Ehr.css
+++ b/ehr/src/Ehr.css
@@ -23,15 +23,60 @@
 .Site-content .Ehr-buttons p {
   color: black;
   margin: 0.4rem;
-  font-size: calc(4px + 1vmin);
+  font-size: calc(6px + 1vmin);
   flex: 1;
-  text-align: right;
 }
 
 .Site-content .Ehr-buttons button {
-
   margin: 3px;
   font-size: calc(4px + 1vmin);
+  max-height: 3vh;
+}
+
+.message-panel {
+  display: flex;
+  max-height: 35vh;
+  min-height: 30vh;
+  width: 95vw;
+  flex-direction: row;
+  margin: 1rem;
+}
+
+.Site-content .message-panel p {
+  font-size: calc(6px + 1vmin);
+  color: #61dafb;
+}
+
+.message-panel div {
+  padding: 1vw 1vw 2vw 2vw;
+  border-radius: 4px;
+}
+
+textarea {
+  min-height: 20vh;
+  min-width: 45vw;
+}
+
+.to-send {
+  display: flex;
+  flex-direction: column;
+  background-color:slategray;
+}
+
+.send-button {
+  background-color: rgba(8, 200, 8, 0.329);
+}
+
+.from-app {
+  display: flex;
+  flex-direction: column;
+}
+
+.Ehr-message {
+  width: 45vw;
+  display: flex;
+  height: 60vh;
+  flex: 1;
 }
 
 .Ehr iframe {
@@ -84,11 +129,11 @@
 }
 
 .Ehr-footer {
-  background: #c4f3;
+  background: #01a77e;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #c4fe;
+  color: #c0ff33;
 }
