--- a/app/src/App.css
+++ b/app/src/App.css
@@ -26,10 +26,17 @@
 .App-header {
   background-color: #caf3;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   font-size: calc(10px + 2vmin);
   color: #cafe;
+}
+
+.config-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 2px;
+  margin: 1vmin;
 }
 
 .App main {
