--- a/ehr/src/Ehr.css
+++ b/ehr/src/Ehr.css
@@ -10,8 +10,42 @@
   position: absolute;
   top: 0;
   right: 0;
-  margin: 1vh;
-  font-size: calc(4px + 1vmin);
+  padding: 2px;
+  margin:1.5vmin;
+}
+.config-panel {
+  background-color: lightpink;
+  border-radius: 1vmin;
+  border-color: purple;
+  height: 30vh;
+  width: 30vw;
+}
+.config-header {
+  justify-content: space-between;
+  display: flex;
+  padding-bottom: 1vmin;
+  font-size: 2vmax;
+}
+.config-settings {
+  display: flex;
+  flex-direction: column;
+  margin: 1vmin;
+}
+.config-field {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 5px;
+  justify-content: space-between;
+}
+.config-field .config-label p {
+  color: black;
+  font-size: 1vmax;
+  font-weight: bold;
+}
+.config-field input {
+  font-size: calc(6px + 1vmin);
+  min-width: 20vmax;
+  min-height: 2vmax;
 }
 
 .Site-content {
