--- a/ehr/src/Ehr.css
+++ b/ehr/src/Ehr.css
@@ -6,6 +6,17 @@
   color: lightgray;
 }
 
+.Ehr-header {
+  background: #01a77e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #c0ff33;
+  padding: 0.75vmin;
+}
+
 .config-button {
   position: absolute;
   top: 0;
@@ -156,16 +167,6 @@ textarea {
   color: lightblue;
   max-height: 25vh;
   overflow: auto;
-}
-
-.Ehr-header {
-  background: #01a77e;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #c0ff33;
 }
 
 .Ehr-footer {
