--- a/app/src/App.css
+++ b/app/src/App.css
@@ -134,6 +134,9 @@
   width: 100%;
   margin-left: 5px;
 }
+.send-controls label[disabled] {
+  color: darkgray;
+}
 
 .from-ehr {
   display: flex;
