--- a/app/src/App.css
+++ b/app/src/App.css
@@ -71,7 +71,7 @@
 }
 
 .App main {
-  background-color: #fffecf33;
+  background-color: #ffffff99;
   flex: 1;
   height: 100vh;
 }
@@ -112,12 +112,9 @@
 .to-send {
   display: flex;
   flex-direction: column;
-  background-color: lightslategrey;
+  background-color: lightpink;
 }
 
-.send-button {
-  background-color: rgba(8, 200, 8, 0.329);
-}
 .send-controls {
   display: flex;
   flex-direction: row;
@@ -126,9 +123,13 @@
   max-height: 1.5rem;
 }
 .send-controls button {
-  background-color: rgba(8, 200, 8, 0.329);
+  color: red;
+  font-weight: bold;
   width: 100%;
   margin-left: 5px;
+}
+.send-controls button[disabled] {
+  color: gray;
 }
 .send-controls label[disabled] {
   color: darkgray;
