--- a/app/src/App.css
+++ b/app/src/App.css
@@ -71,7 +71,7 @@
 }
 
 .App main {
-  background-color: #fffecf33;
+  background-color: #ffffff99;
   flex: 1;
   height: 100vh;
 }
@@ -112,12 +112,9 @@
 .to-send {
   display: flex;
   flex-direction: column;
-  background-color: lightslategrey;
+  background-color: lightpink;
 }
 
-.send-button {
-  background-color: rgba(8, 200, 8, 0.329);
-}
 .send-controls {
   display: flex;
   flex-direction: row;
@@ -126,7 +123,7 @@
   max-height: 1.5rem;
 }
 .send-controls button {
-  background-color: rgba(8, 200, 8, 0.329);
+  background-color: rgb(8, 200, 8);
   width: 100%;
   margin-left: 5px;
 }
