--- a/ehr/src/Ehr.css
+++ b/ehr/src/Ehr.css
@@ -146,7 +146,7 @@ textarea {
   margin: 0.4rem;
 }
 
-.Ehr-scratchpad {
+.scratchpad {
   background-color: #282c66;
   display: flex;
   flex-direction: column;
@@ -155,22 +155,10 @@ textarea {
   max-height: 25vh;
   overflow: auto;
 }
-.Ehr-scratchpad div.row {
+.scratchpad div.row {
   display: flex;
 }
-.Ehr-scratchpad .apply-message {
-  background: #FFF3;
-  color: #c0ff33;
-  margin: 5px;
-}
-.Ehr-scratchpad .apply-message[disabled] {
-  background: #FFF1;
-  color: #FFF3;
-}
-.Ehr-scratchpad p {
-  padding-right: 10px;
-}
-.Ehr-scratchpad pre {
+.scratchpad pre {
   margin: 5px;
   color: #c0ff33;
   background: #FFF3;
@@ -178,6 +166,8 @@ textarea {
   font-size: calc(0.9rem);
   border-radius: 4px;
   width: 100%;
+  position: relative;
+  display: none;
 }
 
 .Embedded-app {
