--- a/ehr/src/Ehr.css
+++ b/ehr/src/Ehr.css
@@ -80,6 +80,9 @@
 
 .Site-content {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
 }
 
