--- a/app/src/App.css
+++ b/app/src/App.css
@@ -44,7 +44,7 @@
   justify-content: space-between;
   display: flex;
   padding-bottom: 1vmin;
-  font-size: 2vh;
+  font-size: 1.2rem;
 }
 .close-config {
   min-width: 3vmax;
